--- a/web_app/contatos/templates/base/register_modal.html
+++ b/web_app/contatos/templates/base/register_modal.html
@@ -1,4 +1,5 @@
 <div class="modal-data-register">
+    <img src="../../static/image/icons/cadastrar.svg" alt="Adição de avatar" class="i-cadastro">
     <div class="modal-register-container-text">
         <span class="modal-register-text-icon"></span>
         <span class="modal-register-text">
