--- a/web_app/static/style/modal.css
+++ b/web_app/static/style/modal.css
@@ -124,7 +124,7 @@ body.modal-open {
 	text-transform: capitalize;
 	
 	width: fit-content;
-	padding: 15px;
+	padding: 15px 95px;
 	margin: auto;
 	border: none;
 	border-radius: 15px;
